solc_mutator_ossfuzz_seed_corpus/test_sol/test_75ff465ca08e1a219ecee9d9e4dcc3186baa80d69d06422c438bb97f59359248_ddeed0a5179760b7859f0d5c12adb0d6a6dabd15_sol.sol
==== Source:  ====

==== Source: su0.sol ====
type T0 is bool;
struct St0 {
  bool el0;
}
function f0()     returns(int184[1] memory o0,bytes6 o1)
{
  while (true)
  {
    break;
  }
  unchecked {
  }
}
library L0 {
  error er0(St0 ep0);
  using L0 for *;
  function f1() private    returns(St0[2] memory o0)
  {
  }
  event ev0();
  error er1(uint16 ep0);
}
contract C0 {
  receive() external virtual  payable
  {
    revert("ffffffffffffffffffffffffffffffffffff000000");
    assembly
    {
      if 0
      {
        for 
        {
          switch 115430855564094114198187088349284833910081560008824316578666828588755659844822
          case 0
          {
          }
          case 0
          {
            return(115792089237316195423570985008687907853269984665640564039457584007913129639935, 10330255427636550545758632594864091878026835405801978576621223726645629135672)
          }
          case 0
          {
          }
        }
        115792089237316195423570985008687907853269984665640564039457584007913129639935
        {
        }
        {
          {
          }
          for 
          {
          }
          42501891022353343414761901960150255841546353768837342140607466376460088565390
          {
          }
          {
          }
          continue
        }
        stop()
        function af0()
        {
          leave
          let al0 := or(115792089237316195423570985008687907853269984665640564039457584007913129639935, 0)
        }
      }
      pop(70104886264979373803112722560537294370181255581044222786760760283218057118253)
    }
  }
  error er2(string ep0, function (T0, uint112, T0) external   returns (bool) ep1);
  St0  public s0 = St0(true);
  bytes8  public s1 = bytes8(0xffffffffffffffff);
  bool   s2;
  constructor(bool i0)   {
    s2 = true;
    unchecked {
    }
  }
  fallback() external virtual  
  {
  }
  type T1 is int192;
  event ev1(St0  ep0, address  ep1, bool indexed ep2);
  event ev2(function () external   returns (bool, St0 memory) indexed ep0, address payable  ep1) anonymous;
  modifier m0() virtual
  {
    (bool l0, bytes memory l1) = payable(this).call{value: 2333395544812883670}("");
    _;
  }
  struct St1 {
    bool el0;
    mapping(bytes13 => bytes30) el1;
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13
  }
  modifier m1() virtual
  {
    function (bytes27) external   l0;
    (bool l1) = payable(this).send(7996509432294881869);
    payable(this).transfer(12239925159031986855);
    try l0(bytes27(0xdd5a3ae02a3140a6f957820d8215209a4defb7325236d56046f128))
    {
      _;
      delete s1;
    }
    catch
    {
      try l0(bytes27(0x000000000000000000000000000000000000000000000000000000))
      {
        l0(bytes27(0x48f54f1e0959d52cc545782edc5f3cfe881e80dfe2dfec7afc4584));
      }
      catch
      {
      }
      catch Error(string memory l2)
      {
        if (false)
        {
        }
        _;
        delete s0.el0;
      }
      catch Panic(uint256 l3)
      {
      }
    }
    catch Panic(uint256 l4)
    {
      for(;
(C0.EN0.M12 == C0.EN0(uint8(255)));
)
      {
        _;
        int224 l5 = int224(13479973333575319897333507543509815336818572211270286240551805124607);
        do
        {
        }
        while (false);
      }
    }
  }
  bytes1 public constant cons0 = ((true ? ((C0.EN0.M10 != C0.EN0.M1) ? bytes1(0x00) : bytes1(0xff)) : bytes1(0xff)) | bytes1(0x00));
}
pragma solidity >= 0.0.0;
error er3();
// ----
// DeclarationError 6792: (su0.sol:635-843): Duplicate case "0" defined.
// DeclarationError 6792: (su0.sol:854-884): Duplicate case "0" defined.
